--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -5,10 +5,9 @@ django-tables2==2.0.5
 django-user-agents==0.4.0
 gunicorn==19.9.0
 olefile==0.46
-Pillow==5.3.0
-psycopg2==2.8.3
 pytz==2018.7
 whitenoise==4.1.3
 gTTS==2.0.4
 gTTS-token==1.1.3
 SpeechRecognition==3.8.1
+google-cloud-texttospeech
