--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -10,4 +10,5 @@ whitenoise==4.1.3
 gTTS==2.0.4
 gTTS-token==1.1.3
 SpeechRecognition==3.8.1
-google-cloud-texttospeech
+google-cloud-texttospeechcd
+google-cloud-translate
