--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -14,3 +14,4 @@ google-cloud-texttospeech
 google-cloud-translate
 django-autotranslate
 django-modeltranslation==0.13.3
+python-speech-features==0.6
