--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -15,3 +15,4 @@ google-cloud-translate
 django-autotranslate
 django-modeltranslation==0.13.3
 python-speech-features==0.6
+google-cloud-speech==1.3.2
