--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -16,3 +16,6 @@ django-autotranslate
 django-modeltranslation==0.13.3
 python-speech-features==0.6
 google-cloud-speech==1.3.2
+scipy
+sklearn==0.16.1
+python_speech_features
