google assistant gmm added

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -5,3 +5,4 @@ virtualEnvironment
 Voice_Auth/media
 Voice_Auth/accounts/__pycache__
 src/Voice_Auth/accounts/migrations/__pycache__
+Voice_Auth/db.sqlite3
