--- a/src/.gitignore
+++ b/src/.gitignore
@@ -6,3 +6,7 @@ Voice_Auth/media
 Voice_Auth/accounts/__pycache__
 src/Voice_Auth/accounts/migrations/__pycache__
 Voice_Auth/db.sqlite3
+Voice_Auth/media/output1.mp3
+Voice_Auth/media/output2.mp3
+Voice_Auth/media/output3.mp3
+Voice_Auth/media/output4.mp3
