--- a/src/.gitignore
+++ b/src/.gitignore
@@ -4,6 +4,7 @@ Voice_Auth/cred.json
 virtualEnvironment
 Voice_Auth/media
 Voice_Auth/accounts/__pycache__
+Voice_Auth/Voice_Auth/__pycache__
 src/Voice_Auth/accounts/migrations/__pycache__
 Voice_Auth/db.sqlite3
 Voice_Auth/media/output1.mp3
